--- a/booking-list.html
+++ b/booking-list.html
@@ -871,9 +871,20 @@
                       </div>
                     </div>
                     <ul class="flight-info">
-                      <li>Thursday, <span>Jun 16</span></li>
-                      <li class="time"><span>12: 55</span>DAC</li>
-                      <li>22h<span>2 Stops</span></li>
+                      <li>DAC 10:30<span>THU 22 Sep</span></li>
+                      <!-- New Part -->
+
+                      <div class="fromToRouteBox durationTime squareBox">
+                        <span class="travelTimeBox columnBlock"> 1h 0m</span>
+                        <span class="travelRouteIconBox">
+                          <span class="travelStopsBox"></span>
+                        </span>
+                        <span class="columnBlock"> Non stop</span>
+                      </div>
+
+                      <!-- New Part End -->
+
+                      <li>DXB 10:30<span>THU 22 Sep</span></li>
                     </ul>
                     <div class="flight-price">
                       <h4 class="title">BDT 1,056.40</h4>
@@ -887,17 +898,17 @@
                       <li class="detail">
                         <i class="fa-solid fa-angle-down"></i> Flight Detail
                       </li>
-                      <li class="detail">
+                      <li class="refund">Refundable</li>
+                      <li id="price" class="detail">
                         <i class="fa-solid fa-angle-down"></i> Price Detail
                       </li>
-                      <li>Refundable</li>
                     </ul>
                   </div>
                 </div>
                 <div class="flight-detail-wrap">
                   <div class="flight-date">
                     <ul>
-                      <li>Thursday, Jun 16</li>
+                      <li>Dhaka, Jun 16</li>
                       <li>Thursday, Jun 16 - 23:20 <span>22h 50m</span></li>
                       <li>Friday, Jun 17 - 03:20</li>
                     </ul>
@@ -906,354 +917,6 @@
                     <h4 class="title">IST - Istanbul Airport, Turkish</h4>
                     <div class="flight-detail-info">
                       <img src="assets/img/icon/booking_icon01.jpg" alt="" />
-                      <ul>
-                        <li>Tpm Line</li>
-                        <li>Operated by Airlines</li>
-                        <li>
-                          Economy | Flight EK585 | Aircraft BOEING 777-300ER
-                        </li>
-                        <li>Adult(s): 25KG luggage free</li>
-                      </ul>
-                    </div>
-                    <h4 class="title title-two">
-                      DXB - Dubai, United Arab Emirates
-                    </h4>
-                  </div>
-                </div>
-              </div>
-              <div class="booking-list-item">
-                <div class="booking-list-item-inner">
-                  <div class="booking-list-top">
-                    <div class="flight-airway">
-                      <div class="flight-logo">
-                        <img src="assets/img/icon/booking_icon02.jpg" alt="" />
-                        <h5 class="title">Qatar Airways</h5>
-                      </div>
-                      <span>Operated by Emirates</span>
-                    </div>
-                    <ul class="flight-info">
-                      <li>Thursday, <span>Jun 16</span></li>
-                      <li class="time"><span>12: 55</span>DAC</li>
-                      <li>22h<span>2 Stops</span></li>
-                    </ul>
-                    <div class="flight-price">
-                      <h4 class="title">US$ 1,099.40</h4>
-                      <a href="booking-details.html" class="btn"
-                        >Book Now <i class="flaticon-flight-1"></i
-                      ></a>
-                    </div>
-                  </div>
-                  <div class="booking-list-bottom">
-                    <ul>
-                      <li class="detail">
-                        <i class="fa-solid fa-angle-down"></i> Flight Detail
-                      </li>
-                      <li>Price per person (incl. taxes & fees)</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="flight-detail-wrap">
-                  <div class="flight-date">
-                    <ul>
-                      <li>Thursday, Jun 16</li>
-                      <li>Thursday, Jun 16 - 23:20 <span>22h 50m</span></li>
-                      <li>Friday, Jun 17 - 03:20</li>
-                    </ul>
-                  </div>
-                  <div class="flight-detail-right">
-                    <h4 class="title">IST - Istanbul Airport, Turkish</h4>
-                    <div class="flight-detail-info">
-                      <img src="assets/img/icon/booking_icon02.jpg" alt="" />
-                      <ul>
-                        <li>Tpm Line</li>
-                        <li>Operated by Airlines</li>
-                        <li>
-                          Economy | Flight EK585 | Aircraft BOEING 777-300ER
-                        </li>
-                        <li>Adult(s): 25KG luggage free</li>
-                      </ul>
-                    </div>
-                    <h4 class="title title-two">
-                      DXB - Dubai, United Arab Emirates
-                    </h4>
-                  </div>
-                </div>
-              </div>
-              <div class="booking-list-item">
-                <div class="booking-list-item-inner">
-                  <div class="booking-list-top">
-                    <div class="flight-airway">
-                      <div class="flight-logo">
-                        <img src="assets/img/icon/booking_icon03.jpg" alt="" />
-                        <h5 class="title">Envat (DXB)</h5>
-                      </div>
-                      <span>Operated by Emirates</span>
-                    </div>
-                    <ul class="flight-info">
-                      <li>Thursday, <span>Jun 16</span></li>
-                      <li class="time"><span>12: 55</span>DAC</li>
-                      <li>22h<span>2 Stops</span></li>
-                    </ul>
-                    <div class="flight-price">
-                      <h4 class="title">US$ 1,200.00</h4>
-                      <a href="booking-details.html" class="btn"
-                        >Book Now <i class="flaticon-flight-1"></i
-                      ></a>
-                    </div>
-                  </div>
-                  <div class="booking-list-bottom">
-                    <ul>
-                      <li class="detail">
-                        <i class="fa-solid fa-angle-down"></i> Flight Detail
-                      </li>
-                      <li>Price per person (incl. taxes & fees)</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="flight-detail-wrap">
-                  <div class="flight-date">
-                    <ul>
-                      <li>Thursday, Jun 16</li>
-                      <li>Thursday, Jun 16 - 23:20 <span>22h 50m</span></li>
-                      <li>Friday, Jun 17 - 03:20</li>
-                    </ul>
-                  </div>
-                  <div class="flight-detail-right">
-                    <h4 class="title">IST - Istanbul Airport, Turkish</h4>
-                    <div class="flight-detail-info">
-                      <img src="assets/img/icon/booking_icon03.jpg" alt="" />
-                      <ul>
-                        <li>Tpm Line</li>
-                        <li>Operated by Airlines</li>
-                        <li>
-                          Economy | Flight EK585 | Aircraft BOEING 777-300ER
-                        </li>
-                        <li>Adult(s): 25KG luggage free</li>
-                      </ul>
-                    </div>
-                    <h4 class="title title-two">
-                      DXB - Dubai, United Arab Emirates
-                    </h4>
-                  </div>
-                </div>
-              </div>
-              <div class="booking-list-item">
-                <div class="booking-list-item-inner">
-                  <div class="booking-list-top">
-                    <div class="flight-airway">
-                      <div class="flight-logo">
-                        <img src="assets/img/icon/booking_icon04.jpg" alt="" />
-                        <h5 class="title">Lankan Airlines</h5>
-                      </div>
-                      <span>Operated by Emirates</span>
-                    </div>
-                    <ul class="flight-info">
-                      <li>Thursday, <span>Jun 16</span></li>
-                      <li class="time"><span>12: 55</span>DAC</li>
-                      <li>22h<span>2 Stops</span></li>
-                    </ul>
-                    <div class="flight-price">
-                      <h4 class="title">BDT 1,056.40</h4>
-                      <a href="booking-details.html" class="btn"
-                        >Book Now <i class="flaticon-flight-1"></i
-                      ></a>
-                    </div>
-                  </div>
-                  <div class="booking-list-bottom">
-                    <ul>
-                      <li class="detail">
-                        <i class="fa-solid fa-angle-down"></i> Flight Detail
-                      </li>
-                      <li>Price per person (incl. taxes & fees)</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="flight-detail-wrap">
-                  <div class="flight-date">
-                    <ul>
-                      <li>Thursday, Jun 16</li>
-                      <li>Thursday, Jun 16 - 23:20 <span>22h 50m</span></li>
-                      <li>Friday, Jun 17 - 03:20</li>
-                    </ul>
-                  </div>
-                  <div class="flight-detail-right">
-                    <h4 class="title">IST - Istanbul Airport, Turkish</h4>
-                    <div class="flight-detail-info">
-                      <img src="assets/img/icon/booking_icon04.jpg" alt="" />
-                      <ul>
-                        <li>Tpm Line</li>
-                        <li>Operated by Airlines</li>
-                        <li>
-                          Economy | Flight EK585 | Aircraft BOEING 777-300ER
-                        </li>
-                        <li>Adult(s): 25KG luggage free</li>
-                      </ul>
-                    </div>
-                    <h4 class="title title-two">
-                      DXB - Dubai, United Arab Emirates
-                    </h4>
-                  </div>
-                </div>
-              </div>
-              <div class="booking-list-item">
-                <div class="booking-list-item-inner">
-                  <div class="booking-list-top">
-                    <div class="flight-airway">
-                      <div class="flight-logo">
-                        <img src="assets/img/icon/booking_icon05.jpg" alt="" />
-                        <h5 class="title">Dubai (DXB)</h5>
-                      </div>
-                      <span>Operated by Emirates</span>
-                    </div>
-                    <ul class="flight-info">
-                      <li>Thursday, <span>Jun 16</span></li>
-                      <li class="time"><span>12: 55</span>DAC</li>
-                      <li>22h<span>2 Stops</span></li>
-                    </ul>
-                    <div class="flight-price">
-                      <h4 class="title">BDT 1,056.40</h4>
-                      <a href="booking-details.html" class="btn"
-                        >Book Now <i class="flaticon-flight-1"></i
-                      ></a>
-                    </div>
-                  </div>
-                  <div class="booking-list-bottom">
-                    <ul>
-                      <li class="detail">
-                        <i class="fa-solid fa-angle-down"></i> Flight Detail
-                      </li>
-                      <li>Price per person (incl. taxes & fees)</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="flight-detail-wrap">
-                  <div class="flight-date">
-                    <ul>
-                      <li>Thursday, Jun 16</li>
-                      <li>Thursday, Jun 16 - 23:20 <span>22h 50m</span></li>
-                      <li>Friday, Jun 17 - 03:20</li>
-                    </ul>
-                  </div>
-                  <div class="flight-detail-right">
-                    <h4 class="title">IST - Istanbul Airport, Turkish</h4>
-                    <div class="flight-detail-info">
-                      <img src="assets/img/icon/booking_icon05.jpg" alt="" />
-                      <ul>
-                        <li>Tpm Line</li>
-                        <li>Operated by Airlines</li>
-                        <li>
-                          Economy | Flight EK585 | Aircraft BOEING 777-300ER
-                        </li>
-                        <li>Adult(s): 25KG luggage free</li>
-                      </ul>
-                    </div>
-                    <h4 class="title title-two">
-                      DXB - Dubai, United Arab Emirates
-                    </h4>
-                  </div>
-                </div>
-              </div>
-              <div class="booking-list-item">
-                <div class="booking-list-item-inner">
-                  <div class="booking-list-top">
-                    <div class="flight-airway">
-                      <div class="flight-logo">
-                        <img src="assets/img/icon/booking_icon01.jpg" alt="" />
-                        <h5 class="title">Etihad Airway</h5>
-                      </div>
-                      <span>Operated by Emirates</span>
-                    </div>
-                    <ul class="flight-info">
-                      <li>Thursday, <span>Jun 16</span></li>
-                      <li class="time"><span>12: 55</span>DAC</li>
-                      <li>22h<span>2 Stops</span></li>
-                    </ul>
-                    <div class="flight-price">
-                      <h4 class="title">BDT 1,056.40</h4>
-                      <a href="booking-details.html" class="btn"
-                        >Book Now <i class="flaticon-flight-1"></i
-                      ></a>
-                    </div>
-                  </div>
-                  <div class="booking-list-bottom">
-                    <ul>
-                      <li class="detail">
-                        <i class="fa-solid fa-angle-down"></i> Flight Detail
-                      </li>
-                      <li>Price per person (incl. taxes & fees)</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="flight-detail-wrap">
-                  <div class="flight-date">
-                    <ul>
-                      <li>Thursday, Jun 16</li>
-                      <li>Thursday, Jun 16 - 23:20 <span>22h 50m</span></li>
-                      <li>Friday, Jun 17 - 03:20</li>
-                    </ul>
-                  </div>
-                  <div class="flight-detail-right">
-                    <h4 class="title">IST - Istanbul Airport, Turkish</h4>
-                    <div class="flight-detail-info">
-                      <img src="assets/img/icon/booking_icon01.jpg" alt="" />
-                      <ul>
-                        <li>Tpm Line</li>
-                        <li>Operated by Airlines</li>
-                        <li>
-                          Economy | Flight EK585 | Aircraft BOEING 777-300ER
-                        </li>
-                        <li>Adult(s): 25KG luggage free</li>
-                      </ul>
-                    </div>
-                    <h4 class="title title-two">
-                      DXB - Dubai, United Arab Emirates
-                    </h4>
-                  </div>
-                </div>
-              </div>
-              <div class="booking-list-item">
-                <div class="booking-list-item-inner">
-                  <div class="booking-list-top">
-                    <div class="flight-airway">
-                      <div class="flight-logo">
-                        <img src="assets/img/icon/booking_icon02.jpg" alt="" />
-                        <h5 class="title">Tom Line (DXB)</h5>
-                      </div>
-                      <span>Operated by Emirates</span>
-                    </div>
-                    <ul class="flight-info">
-                      <li>Thursday, <span>Jun 16</span></li>
-                      <li class="time"><span>12: 55</span>DAC</li>
-                      <li>22h<span>2 Stops</span></li>
-                    </ul>
-                    <div class="flight-price">
-                      <h4 class="title">BDT 1,056.40</h4>
-                      <a href="booking-details.html" class="btn"
-                        >Book Now <i class="flaticon-flight-1"></i
-                      ></a>
-                    </div>
-                  </div>
-                  <div class="booking-list-bottom">
-                    <ul>
-                      <li class="detail">
-                        <i class="fa-solid fa-angle-down"></i> Flight Detail
-                      </li>
-                      <li>Price per person (incl. taxes & fees)</li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="flight-detail-wrap">
-                  <div class="flight-date">
-                    <ul>
-                      <li>Thursday, Jun 16</li>
-                      <li>Thursday, Jun 16 - 23:20 <span>22h 50m</span></li>
-                      <li>Friday, Jun 17 - 03:20</li>
-                    </ul>
-                  </div>
-                  <div class="flight-detail-right">
-                    <h4 class="title">IST - Istanbul Airport, Turkish</h4>
-                    <div class="flight-detail-info">
-                      <img src="assets/img/icon/booking_icon02.jpg" alt="" />
                       <ul>
                         <li>Tpm Line</li>
                         <li>Operated by Airlines</li>
