--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="assets/img/favicon.png"
+      href="assets/img/images/icon-7.png"
     />
     <!-- Place favicon.ico in the root directory -->
 
@@ -48,48 +48,6 @@
 
     <!-- header-area -->
     <header>
-      <div class="header-top">
-        <div class="container custom-container">
-          <div class="row">
-            <div class="col-xl-4">
-              <div class="header-top-left">
-                <a href="#"
-                  ><i class="fa-solid fa-plane"></i> COVID-19 update & travel
-                  requirements</a
-                >
-              </div>
-            </div>
-            <div class="col-xl-8">
-              <div class="header-top-right">
-                <ul>
-                  <li><a href="contact.html">Corporate Club</a></li>
-                  <li><a href="contact.html">Miles&Smiles</a></li>
-                  <li>
-                    <a href="about.html"
-                      ><i class="fa-solid fa-comments"></i>Feedback</a
-                    >
-                  </li>
-                  <li>
-                    <a href="#"
-                      ><i class="fa-solid fa-magnifying-glass"></i>Search</a
-                    >
-                  </li>
-                  <li>
-                    <a href="contact.html"
-                      ><i class="fa-solid fa-dollar-sign"></i>Currency</a
-                    >
-                  </li>
-                  <li>
-                    <a href="booking-list.html"
-                      ><i class="fa-solid fa-earth-asia"></i>EN - INT</a
-                    >
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
       <div id="sticky-header" class="menu-area menu-style-two">
         <div class="container custom-container">
           <div class="row">
@@ -99,7 +57,7 @@
                 <nav class="menu-nav">
                   <div class="logo">
                     <a href="index.html"
-                      ><img src="assets/img/logo/logo.png" alt=""
+                      ><img src="assets/img/images/logo-01.png" alt=""
                     /></a>
                   </div>
                   <div class="navbar-wrap main-menu d-none d-lg-flex">
@@ -127,13 +85,6 @@
                   </div>
                   <div class="header-action d-none d-md-block">
                     <ul>
-                      <li class="country">
-                        <a href="#"
-                          >usd
-                          <img src="assets/img/icon/united-states.png" alt=""
-                        /></a>
-                      </li>
-                      <li class="question"><a href="contact.html">?</a></li>
                       <li class="header-btn">
                         <a href="contact.html" class="btn">Register</a>
                       </li>
@@ -150,7 +101,7 @@
                   <div class="close-btn"><i class="fa-solid fa-xmark"></i></div>
                   <div class="nav-logo">
                     <a href="index.html"
-                      ><img src="assets/img/logo/logo_02.png" alt="" title=""
+                      ><img src="assets/img/images/logo-23.png" alt="" title=""
                     /></a>
                   </div>
                   <div class="menu-outer">
@@ -266,9 +217,6 @@
           allowfullscreen=""
           loading="lazy"
         ></iframe>
-        <!-- <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d96811.54759587669!2d-74.01263924803828!3d40.6880494567041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25bae694479a3%3A0xb9949385da52e69e!2sBarclays%20Center!5e0!3m2!1sen!2sbd!4v1636195194646!5m2!1sen!2sbd"
-                    allowfullscreen loading="lazy"></iframe> -->
       </div>
       <!-- contact-map-end -->
     </main>
