--- a/index.html
+++ b/index.html
@@ -960,7 +960,7 @@
                       </li>
                     </ul>
                     <div class="content-price">
-                      <!-- <span class="price">450$</span> -->
+                      <span class="price">৳ 23,999</span>
                       <span class="for-price"
                         ><i class="fas fa-calendar-alt"></i>3 Days 2
                         Nights</span
@@ -1001,7 +1001,7 @@
                       </li>
                     </ul>
                     <div class="content-price">
-                      <!-- <span class="price">299$</span> -->
+                      <span class="price">৳ 23,999</span>
                       <span class="for-price"
                         ><i class="fas fa-calendar-alt"></i>3 Days 2
                         Nights</span
