--- a/blog-details.html
+++ b/blog-details.html
@@ -29,16 +29,18 @@
     <link rel="stylesheet" href="assets/css/responsive.css" />
   </head>
   <body class="white-background">
-    <!-- preloader -->
-    <div id="preloader">
-      <div id="loading-center">
-        <div class="loader">
-          <div class="loader-outter"></div>
-          <div class="loader-inner"></div>
-        </div>
+    <!-- Preloader -->
+    <div class="spinner-wrapper">
+      <div class="logo-spinner">
+        <img src="./assets/img/logo/logo-22.png" alt="logo" />
+      </div>
+      <div class="spinner">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
       </div>
     </div>
-    <!-- preloader-end -->
+    <!-- End of Preloader -->
 
     <!-- Scroll-top -->
     <button class="scroll-top scroll-to-target" data-target="html">
