--- a/booking-list.html
+++ b/booking-list.html
@@ -29,16 +29,18 @@
     <link rel="stylesheet" href="assets/css/responsive.css" />
   </head>
   <body class="white-background">
-    <!-- preloader -->
-    <div id="preloader">
-      <div id="loading-center">
-        <div class="loader">
-          <div class="loader-outter"></div>
-          <div class="loader-inner"></div>
-        </div>
+    <!-- Preloader -->
+    <div class="spinner-wrapper">
+      <div class="logo-spinner">
+        <img src="./assets/img/logo/logo-22.png" alt="logo" />
+      </div>
+      <div class="spinner">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
       </div>
     </div>
-    <!-- preloader-end -->
+    <!-- End of Preloader -->
 
     <!-- Scroll-top -->
     <button class="scroll-top scroll-to-target" data-target="html">
@@ -378,14 +380,129 @@
                   </div>
                 </div>
                 <div class="flight-detail-wrap">
-                  <div class="flight-date">
+                  <nav>
+                    <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                      <button
+                        class="nav-link active"
+                        id="nav-home-tab"
+                        data-bs-toggle="tab"
+                        data-bs-target="#nav-home"
+                        type="button"
+                        role="tab"
+                        aria-controls="nav-home"
+                        aria-selected="true"
+                      >
+                        Flight Details
+                      </button>
+                      <button
+                        class="nav-link"
+                        id="nav-profile-tab"
+                        data-bs-toggle="tab"
+                        data-bs-target="#nav-profile"
+                        type="button"
+                        role="tab"
+                        aria-controls="nav-profile"
+                        aria-selected="false"
+                      >
+                        Fare Summary
+                      </button>
+                      <!-- <button
+                        class="nav-link"
+                        id="nav-contact-tab"
+                        data-bs-toggle="tab"
+                        data-bs-target="#nav-contact"
+                        type="button"
+                        role="tab"
+                        aria-controls="nav-contact"
+                        aria-selected="false"
+                      >
+                        Discount & Gross
+                      </button> -->
+                      <button
+                        class="nav-link"
+                        id="nav-contact-tab"
+                        data-bs-toggle="tab"
+                        data-bs-target="#nav-contact"
+                        type="button"
+                        role="tab"
+                        aria-controls="nav-contact"
+                        aria-selected="false"
+                      >
+                        Baggage
+                      </button>
+                      <button
+                        class="nav-link"
+                        id="nav-contact-tab"
+                        data-bs-toggle="tab"
+                        data-bs-target="#nav-contact"
+                        type="button"
+                        role="tab"
+                        aria-controls="nav-contact"
+                        aria-selected="false"
+                      >
+                        Cancellation
+                      </button>
+                      <button
+                        class="nav-link"
+                        id="nav-contact-tab"
+                        data-bs-toggle="tab"
+                        data-bs-target="#nav-contact"
+                        type="button"
+                        role="tab"
+                        aria-controls="nav-contact"
+                        aria-selected="false"
+                      >
+                        Contact
+                      </button>
+                      <button
+                        class="nav-link"
+                        id="nav-contact-tab"
+                        data-bs-toggle="tab"
+                        data-bs-target="#nav-contact"
+                        type="button"
+                        role="tab"
+                        aria-controls="nav-contact"
+                        aria-selected="false"
+                      >
+                        Contact
+                      </button>
+                    </div>
+                  </nav>
+                  <div class="tab-content" id="nav-tabContent">
+                    <div
+                      class="tab-pane fade show active"
+                      id="nav-home"
+                      role="tabpanel"
+                      aria-labelledby="nav-home-tab"
+                    >
+                      test1
+                    </div>
+                    <div
+                      class="tab-pane fade"
+                      id="nav-profile"
+                      role="tabpanel"
+                      aria-labelledby="nav-profile-tab"
+                    >
+                      test2
+                    </div>
+                    <div
+                      class="tab-pane fade"
+                      id="nav-contact"
+                      role="tabpanel"
+                      aria-labelledby="nav-contact-tab"
+                    >
+                      test3
+                    </div>
+                  </div>
+
+                  <!-- <div class="flight-date">
                     <ul>
                       <li>Dhaka, Jun 16</li>
                       <li>Thursday, Jun 16 - 23:20 <span>22h 50m</span></li>
                       <li>Friday, Jun 17 - 03:20</li>
                     </ul>
-                  </div>
-                  <div class="flight-detail-right">
+                  </div> -->
+                  <!-- <div class="flight-detail-right">
                     <h4 class="title">IST - Istanbul Airport, Turkish</h4>
                     <div class="flight-detail-info">
                       <img src="assets/img/icon/booking_icon01.jpg" alt="" />
@@ -401,7 +518,7 @@
                     <h4 class="title title-two">
                       DXB - Dubai, United Arab Emirates
                     </h4>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
