--- a/booking-list.html
+++ b/booking-list.html
@@ -380,6 +380,14 @@
                   </div>
                 </div>
                 <div class="flight-detail-wrap">
+                  <!-- mew iption added -->
+
+                  <!--
+Fare Summary
+Discount & Gross
+Baggage
+Cancellation
+Date Change -->
                   <nav>
                     <div class="nav nav-tabs" id="nav-tab" role="tablist">
                       <button
@@ -406,7 +414,7 @@
                       >
                         Fare Summary
                       </button>
-                      <!-- <button
+                      <button
                         class="nav-link"
                         id="nav-contact-tab"
                         data-bs-toggle="tab"
@@ -417,54 +425,6 @@
                         aria-selected="false"
                       >
                         Discount & Gross
-                      </button> -->
-                      <button
-                        class="nav-link"
-                        id="nav-contact-tab"
-                        data-bs-toggle="tab"
-                        data-bs-target="#nav-contact"
-                        type="button"
-                        role="tab"
-                        aria-controls="nav-contact"
-                        aria-selected="false"
-                      >
-                        Baggage
-                      </button>
-                      <button
-                        class="nav-link"
-                        id="nav-contact-tab"
-                        data-bs-toggle="tab"
-                        data-bs-target="#nav-contact"
-                        type="button"
-                        role="tab"
-                        aria-controls="nav-contact"
-                        aria-selected="false"
-                      >
-                        Cancellation
-                      </button>
-                      <button
-                        class="nav-link"
-                        id="nav-contact-tab"
-                        data-bs-toggle="tab"
-                        data-bs-target="#nav-contact"
-                        type="button"
-                        role="tab"
-                        aria-controls="nav-contact"
-                        aria-selected="false"
-                      >
-                        Contact
-                      </button>
-                      <button
-                        class="nav-link"
-                        id="nav-contact-tab"
-                        data-bs-toggle="tab"
-                        data-bs-target="#nav-contact"
-                        type="button"
-                        role="tab"
-                        aria-controls="nav-contact"
-                        aria-selected="false"
-                      >
-                        Contact
                       </button>
                     </div>
                   </nav>
@@ -475,7 +435,8 @@
                       role="tabpanel"
                       aria-labelledby="nav-home-tab"
                     >
-                      test1
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Quam, excepturi!
                     </div>
                     <div
                       class="tab-pane fade"
@@ -483,7 +444,10 @@
                       role="tabpanel"
                       aria-labelledby="nav-profile-tab"
                     >
-                      test2
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Ipsam hic modi odio tenetur aperiam facilis doloribus
+                      explicabo nesciunt repellendus, ratione dolore veniam
+                      sapiente iste ex pariatur magnam alias ducimus atque!
                     </div>
                     <div
                       class="tab-pane fade"
@@ -491,34 +455,11 @@
                       role="tabpanel"
                       aria-labelledby="nav-contact-tab"
                     >
-                      test3
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Accusamus error laudantium voluptatum vitae veritatis
+                      necessitatibus officia obcaecati tempora libero placeat?
                     </div>
                   </div>
-
-                  <!-- <div class="flight-date">
-                    <ul>
-                      <li>Dhaka, Jun 16</li>
-                      <li>Thursday, Jun 16 - 23:20 <span>22h 50m</span></li>
-                      <li>Friday, Jun 17 - 03:20</li>
-                    </ul>
-                  </div> -->
-                  <!-- <div class="flight-detail-right">
-                    <h4 class="title">IST - Istanbul Airport, Turkish</h4>
-                    <div class="flight-detail-info">
-                      <img src="assets/img/icon/booking_icon01.jpg" alt="" />
-                      <ul>
-                        <li>Tpm Line</li>
-                        <li>Operated by Airlines</li>
-                        <li>
-                          Economy | Flight EK585 | Aircraft BOEING 777-300ER
-                        </li>
-                        <li>Adult(s): 25KG luggage free</li>
-                      </ul>
-                    </div>
-                    <h4 class="title title-two">
-                      DXB - Dubai, United Arab Emirates
-                    </h4>
-                  </div> -->
                 </div>
               </div>
             </div>
