--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <a href="contact.html" class="btn">Register</a>
                       </li>
                       <li class="header-btn sign-in">
-                        <a href="contact.html" class="btn">Sign In</a>
+                        <a href="contact.html" class="btn">Agent Login</a>
                       </li>
                     </ul>
                   </div>
@@ -198,13 +198,6 @@
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
-              <div class="booking-tag">
-                <div class="flight-title text-center">
-                  <marquee>
-                    <h1>AircityBD Find Your Best Flight with Us!! </h1>
-                 </marquee> 
-                </div>
-              </div>
               <div class="booking-wrap">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
                   <li class="nav-item" role="presentation">
