added footer section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <title>AirCityBD</title>
     <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+assets/css/style.css    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link
       rel="shortcut icon"
@@ -1337,7 +1337,7 @@
                 <div class="footer-widget">
                   <div class="footer-logo">
                     <a href="index.html"
-                      ><img src="assets/img/logo/logo.png" alt=""
+                      ><img src="assets/img/images/logo-01.png" alt=""
                     /></a>
                   </div>
                   <div class="footer-content">
@@ -1347,7 +1347,7 @@
                     </p>
                     <ul class="footer-social">
                       <li>
-                        <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                        <a href="https://www.facebook.com/aircitybd" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
                       </li>
                       <li>
                         <a href="#"><i class="fa-brands fa-twitter"></i></a>
@@ -1404,11 +1404,11 @@
                     <h4 class="title">Contacts</h4>
                   </div>
                   <div class="footer-contact">
-                    <p>PO Box W75 Street lan West new queens</p>
+                    <p>Gazi Complex 3rd Floor, Raipur, Lakshmipur</p>
                     <h2 class="title">
-                      <a href="tel:0123456789">+1 246 333 - 0079</a>
+                      <a href="tel:+8801644299822">+880164  -4299822</a>
                     </h2>
-                    <a href="#">geair@company.com</a>
+                    <a href="#">aircitybd@gmail.com</a>
                     <form action="#">
                       <input type="email" placeholder="Enter your email" />
                       <button type="submit">
@@ -1427,7 +1427,7 @@
               <div class="col-lg-6">
                 <div class="copyright-text">
                   <p>
-                    Copyright © 2022.All Rights Reserved By <span>Geair</span>
+                    Copyright © 2022.All Rights Reserved By <span>AircityBD</span>
                   </p>
                 </div>
               </div>
